--- a/airflow/docker-compose.yaml
+++ b/airflow/docker-compose.yaml
@@ -163,6 +163,12 @@ services:
       <<: *airflow-common-depends-on
       airflow-init:
         condition: service_completed_successfully
+    deploy:
+      resources:
+        limits:
+          memory: 4096M
+        reservations:
+          memory: 2048M
 
   airflow-triggerer:
     <<: *airflow-common
