--- a/airflow/docker-compose.yaml
+++ b/airflow/docker-compose.yaml
@@ -68,7 +68,7 @@ x-airflow-common:
 
     AIRFLOW__SMTP__SMTP_HOST: smtp.gmail.com
     AIRFLOW__SMTP__SMTP_USER: example@example.com
-    AIRFLOW__SMTP__SMTP_PASSWORD: ldks yfii ddbz yhra
+    AIRFLOW__SMTP__SMTP_PASSWORD: ********
     AIRFLOW__SMTP__SMTP_PORT: 587
     AIRFLOW__SMTP__MAIL_FROM: Airflow
 
